2011-01-24  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/solver/RelSatSolver.h: Add new method for
	collecting learned clauses from relsat.

	* include/dmcs/ConflictNotification.h: Have multiple conflicts in
	one Conflict notification.

	* src/solver/RelSatSolver.cpp: Likewise.
	* src/network/JoinThread.cpp: Likewise.
	* src/dmcsc.cpp: Likewise.
	* src/dmcs/StreamingDMCS.cpp: Likewise.
	* include/solver/Conflict.h: Likewise.
	* include/network/NeighborOut.h: Likewise.
	* include/dmcs/StreamingForwardMessage.h: Likewise.

2011-01-24  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/dyndmcs/DynamicConfiguration.h: Fix DMCS_STATS_INFO
	compilation.

	* include/parser/BaseBuilder.h: Fix warnings.
	* src/network/ThreadFactory.cpp: Likewise.
	* src/network/OutputThread.cpp: Likewise.
	* src/parser/ClaspResultOnlineParser.cpp: Likewise.
	* testsuite/testJoinThread.cpp: Likewise.
	* testsuite/testParsers.cpp: Likewise.

	* include/network/ConcurrentMessageQueue.h: Fix sanity checks.

	* include/network/BaseHandler.h: Moved typedefs to BaseHandler.
	* src/network/Server.cpp: Likewise.
	* include/network/Handler.tcc: Likewise.
	* include/network/Handler.h: Likewise.

2011-01-23  Minh Dao Tran  <dao@kr.tuwien.ac.at>

	* include/mcs/BeliefState.h: Fix output debug.

	* testsuite/testJoinThread.cpp: Add test case for JoinThread.
	* testsuite/Makefile.am: Likewise.

	* src/network/JoinThread.cpp: Fix join.

	* include/network/JoinThread.h: Remove map ctxid--offset.
	* src/network/ThreadFactory.cpp: Likewise.

	* include/network/ConcurrentMessageQueueHelper.h: Add assert.

2011-01-23  Thomas Krennwallner  <tkren@kr.tuwien.ac.at>

	* include/network/ConcurrentMessageQueue.h: Add sanity checks.

	* include/network/Handler.tcc: Handle client terminate.
	* include/network/AsynClient.h: Likewise.
	* include/network/AsynClient.tcc: Likewise.

	* configure.ac: Compile with NDEBUG and -O3 by default.

	* src/dmcsd.cpp: Show compile-time options.
	* src/dmcsc.cpp: Likewise.
